# rcal-xtb

./: .gitignore  AGENTS.md  README.md  mise.toml  pyproject.toml
mols/: AN3.xyz  PEN.xyz  PFP.xyz  PhCOH.xyz  PhNMe2.xyz  RBH2.xyz  RCN.xyz  RCOH.xyz  TL85.xyz  TTA.xyz  ref.bib
results/: AN3_n.csv  AN3_p.csv  PEN_p.csv  PFP_p.csv  PhCOH_p.csv  PhNMe2_p.csv  RBH2_p.csv  RCN_p.csv  RCOH_p.csv  TL85_p.csv  TTA_p.csv  benchmark_gfn2_gxtb.csv  reorg_all_modes.csv
results/gfn2/: AN3_p.csv
results/gxtb/: AN3_n.csv  AN3_p.csv  PEN_p.csv  PFP_p.csv  PhCOH_p.csv  PhNMe2_p.csv  RBH2_p.csv  RCN_p.csv  RCOH_p.csv  TL85_p.csv  TTA_p.csv
src/rcal_xtb/: __init__.py  cli.py  energy_parser.py  reorg_n.py  reorg_p.py  xtb_runner.py
tests/: test_cli_failure_policy.py  test_energy_parser.py  test_reorg_n.py  test_reorg_p.py  test_xtb_runner_engine.py
