[project]
name = "rcal-xtb"
version = "0.1.0"
description = "Calculate P-type and N-type reorganization energies via xTB from Python"
readme = "README.md"
authors = [
    { name = "youthesame" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
rcal-xtb = "rcal_xtb:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 119

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["B008", "B904", "C901"]
